--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
@@ -6,7 +6,7 @@
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'MDSCApp/css/sol.css'%}">
 
-<div class="container inner-container">
+<div class="container inner-container" style="border-color: #b0842a;">
   <center>
     <h4>Solution for Puzzle {{puzInfo.id}}</h4>
     <h2 style="margin-bottom: 1rem">{{puzInfo.title}}</h2>
@@ -98,8 +98,8 @@
 
   <hr>
   <center>
-    <h5>Authors' note</h5>
-    <h6>Credit: Allen Gu, Dan Tao</h6>
+    <h4>Authors' note</h4>
+    <h6>Credit: Allen Gu, Daniel Tao</h6>
   </center>
 
   <p>This puzzle came about because we wanted a puzzle requiring research into a specific topic area; in this case, House MD. Originally, the solution was going to be "SUNDOWNING" (late-day confusion) to fit the Day 4 theme of "Beyond the Horizon", but we changed this to "HOMESICK" for the thematic link to House as we thought that'll be more cute.</p>
@@ -111,7 +111,7 @@
 
   <p>In reality however, most solvers (reasonably) intepreted the word "INDEX" to mean something like "measurement", instead of its intended role in being an instruction to take the <font style='font-style:italic;'>n</font>th letter from something. Hence, the whole clue "DISEASE INDEX Z SCORE" more strongly pointed towards the wrong path (eg. osteoporosis) than we would have liked.</p>
 
-  <p>In hindsight, this first clue was definitely sub-optimal, and we should instead have made it more clear using something like "Z FACTOR DISEASE LETTERS". This 21-word clue would mean we could also have used "LONGING FOR FAMILIARITY", which makes more grammatical sense than the original. Sorry to everyone who got stuck at this stage; we definitely should have made this step a bit clearer in hindsight.</p>
+  <p>In hindsight, this first clue was definitely sub-optimal, and we should instead have made it more clear using something like "Z FACTOR DISEASE LETTERS". This avoids a misinterpretation of "INDEX", especially for solvers unfamiliar with this word's specific use as a letter-extraction instruction. This 21-letter clue would mean we could also have used "LONGING FOR FAMILIARITY", which makes more grammatical sense than the original. Sorry to everyone who got stuck at this stage; we definitely should have made this step a bit clearer in hindsight.</p>
 
   <h6>Difficulty</h6>
   <p>This puzzle was designed to be the most difficult of the Hunt, as by now, everyone should have gotten the hang of it! Specifically, it had ~3 layers, while the others had at most 2 layers to it, or had reasonablly straightfoward mechanisms. It also required an initial realisation of the House MD theme, which would be hard to arrive at if you weren't familiar with House.</p>
