--- a/MDSCProj/MDSCApp/static/MDSCApp/css/main.css
+++ b/MDSCProj/MDSCApp/static/MDSCApp/css/main.css
@@ -180,10 +180,18 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 
+.btn-warning:focus {
+  color: white;
+}
+
 .btn-info {
   color: white;
 }
 
 .btn-info:hover {
+  color: white;
+}
+
+.btn-info:focus {
   color: white;
 }
