--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol1.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol1.html
@@ -4,16 +4,88 @@
 {% block title %}Puzzle {{puzInfo.id}} Solution: {{puzInfo.title}}{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'MDSCApp/css/sol.css'%}">
 
 <div class="container inner-container">
   <center>
     <h4>Solution for Puzzle {{puzInfo.id}}</h4>
     <h2 style="margin-bottom: 1rem">{{puzInfo.title}}</h2>
+    <h4 style="margin-bottom: 1rem">Solution: <span class="sol-hl">HOLMES</span> or <span class="sol-hl">ELIZABETHHOLMES</span></h4>
     <h5>Solves: {{puzInfo.solves}}</h5>
     <h5>Guesses: {{puzInfo.guesses}}</h5>
+    <br>
   </center>
 
-  <h4>Solution is work in progress. Check back in a few hours.</h4>
+  <p>There are three parts to this puzzle: a complicated network of shapes, a set of clues, and a portrait gallery. The most obvious start is by identifying the 17 portraits, which we can do with <a href="https://images.google.com/" target="_blank">Google reverse-image search</a>. In order, the portraits are:</p>
+  <ol>
+    <li>Virginia <b>APGAR</b></li>
+    <li>Harvey <b>CUSHING</b></li>
+    <li>Peter <b>DOHERTY</b></li>
+    <li>Paul <b>EHRLICH</b></li>
+    <li>Arthur <b>FALLOT</b></li>
+    <li>Rosalind <b>FRANKLIN</b></li>
+    <li>Ian <b>FRAZER</b></li>
+    <li>David <b>HO</b></li>
+    <li>Robert <b>KOCH</b></li>
+    <li>Henrietta <b>LACKS</b></li>
+    <li>Sharon <b>LEWIN</b></li>
+    <li>Barry <b>MARSHALL</b></li>
+    <li>William <b>OSLER</b></li>
+    <li>Louis <b>PASTEUR</b></li>
+    <li>Linus <b>PAULING</b></li>
+    <li>Helen <b>TAUSSIG</b></li>
+    <li>Fiona <b>WOOD</b></li>
+  </ol>
+
+  <p>Each of these are individuals from medical history. Moreover, they are currently ordered by alphabetical order of last names, implying that the last names would be important for the next step.</p>
+
+  <p>Specifically, we need to match up these names to the relational clues. As the graph network has 17 spots and there are 16 relational clues, we should try to form a chain of relationships. Specifically, the relationships are:</p>
+
+  <center>
+    <table class="table sol-table table-sm">
+      <thead style="font-weight: bold;">
+        <tr><th>Person 1</th><th>Relationship</th><th>Person 2</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>HO</td><td>who appeared on the cover of the same magazine (Time) 36 years after</td><td>PAULING</td></tr>
+        <tr><td>LEWIN</td><td>who completed her postdoctoral training under</td><td>HO</td></tr>
+        <tr><td>TAUSSIG</td><td>who developed a surgical procedure (Blalock–Thomas–Taussig shunt) to treat the condition named after</td><td>FALLOT</td></tr>
+        <tr><td>OSLER</td><td>who founded the medical school (John Hopkins) attended by</td><td>TAUSSIG</td></tr>
+        <tr><td>PASTEUR</td><td>who had a famous rivalry with</td><td>KOCH</td></tr>
+        <tr><td>FALLOT</td><td>who hails from the same country (France) as</td><td>PASTEUR</td></tr>
+        <tr><td>FRAZER</td><td>who was awarded the same honour (Australian of the Year) a year after</td><td>WOOD</td></tr>
+        <tr><td>WOOD</td><td>who is a professor at the same institution (University of Western Australia) as</td><td>MARSHALL</td></tr>
+        <tr><td>APGAR</td><td>who named a neonatal assessment score after</td><td>APGAR</td></tr>
+        <tr><td>MARSHALL</td><td>who won a prize (Paul Ehrlich and Ludwig Darmstaedter Prize) named in part after</td><td>EHRLICH</td></tr>
+        <tr><td>KOCH</td><td>who won the same award (Nobel Prize in Physiology or Medicine) 91 years before</td><td>DOHERTY</td></tr>
+        <tr><td>PAULING</td><td>who worked on the structure of the same biomolecule (DNA) as</td><td>FRANKLIN</td></tr>
+        <tr><td>CUSHING</td><td>who wrote a biography about the life of</td><td>OSLER</td></tr>
+        <tr><td>LACKS</td><td>whose death (cervical cancer) could have been prevented by the vaccine developed by</td><td>FRAZER</td></tr>
+        <tr><td>EHRLICH</td><td>whose name featured in a film (<font style='font-style:italic;'>Dr. Ehrlich's Magic Bullet</font>) released a year after the death of</td><td>CUSHING</td></tr>
+        <tr><td>DOHERTY</td><td>whose name is on the workplace of</td><td>LEWIN</td></tr>
+      </tbody>
+    </table>
+  </center>
+
+  <p>Some of these links are tricky; for instance, there are multiple Australians, Americans and Germans, so it's not immediately clear that it's the Frenchmen who are related via "hails from the same country". Moreover, Apgar created a scale called the Apgar score.</p>
+
+  <p>Apart from APGAR, the other 16 individuals form a relationship chain that, in order, goes: LACKS, FRAZER, WOOD, MARSHALL, EHRLICH, CUSHING, OSLER, TAUSSIG, FALLOT, PASTEUR, KOCH, DOHERTY, LEWIN, HO, PAULING, FRANKLIN. We can now fill in the graph as follows. Moreover, the shapes tells us which letter to take from each graph node; first letter for the circle (one side), third letter for the triangle, fourth for the square, fifth for the pentagon, sixth for the hexagon.</p>
+
+  <div>
+    <center><img src="/static/MDSCApp/img/puzImg/1Sol.png" alt="Solution 1" style="max-width:min(700px, 100%);padding-top:10px"></center>
+  </div>
+
+  <p>Starting from the START shape and reading clockwise, we get the cluephrase <b>THERANOS CEO NAME IS</b>, hinting at <span class='sol-hl'>ELIZABETH HOLMES</span>, the final answer to the puzzle. While many people throughout history have shaped medicine for the better, Holmes had done the exact opposite. The circular shape of this puzzle's graph network is inspired by Theranos's company logo.</p>
+
+  <hr>
+  <center>
+    <h4>Authors' note</h4>
+    <h6>Credit: Daniel Tao</h6>
+  </center>
+
+  <p>As part of Day 1's theme of Shaping Power, we wanted to devote this puzzle to medical history. There are so many giants in medical history worth remembering, but there are also some villains too.</p>
+
+  <p>We designed this puzzle to be relatively straightforwad mechanism-wise, but a little labour intensive regarding reverse-image-searching and relationship-building. Some relationships were deliberately left ambiguous to force solvers to apply logical skills. Hence, while the process is relatively simple, we recognise that it was time-consuming.</p>
 
 
 </div>
