--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol2.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol2.html
@@ -13,6 +13,7 @@
     <h4 style="margin-bottom: 1rem">Solution: <span class="sol-hl">TOXIC</span></h4>
     <h5>Solves: {{puzInfo.solves}}</h5>
     <h5>Guesses: {{puzInfo.guesses}}</h5>
+    <a class="btn btn-primary" href="/guesslog/2/" style="margin: 5px;">View guess log</a>
     <br>
   </center>
 
