--- a/MDSCProj/MDSCApp/templates/MDSCApp/base.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/base.html
@@ -26,6 +26,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/announcements/">Announcements</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/wrapup/">Wrap-up</a>
+            </li>
           </ul>
         </div>
       </div>
