--- a/MDSCProj/MDSCApp/templates/MDSCApp/index.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/index.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container">
     <center>
-      <h5>Liked Wardle and want more? Try <a class="home-a" href="/wardle/" target="_blank">Wardle: Casual Mode</a></h5>
+      <h5>Read our <a class="home-a" href="/wrapup/">wrap-up</a> and give us some <a class="home-a" href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">feedback</a>!</h5>
       <br>
       <h2>Welcome to</h2>
       <img src="/static/MDSCApp/img/Logo_text_puzzle3.png" alt="MDSC Logo" style="width: min(100%, 900px);padding-top:10px">
@@ -15,6 +15,7 @@
       <br>
       <a class="home-a" href='/instructions/'><h5><b>What are these "puzzles"?</b></h5></a>
       <a class="home-a" href='/puzzles/'><h5><b>Let's do some puzzles!</b></h5></a>
+      <h5>Liked Wardle and want more? Try <a class="home-a" href="/wardle/" target="_blank">Wardle: Casual Mode</a></h5>
     </center>
     <h1></h1>
   </div>
