--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol1.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol1.html
@@ -88,6 +88,15 @@
 
   <p>We designed this puzzle to be relatively straightforwad mechanism-wise, but a little labour intensive regarding reverse-image-searching and relationship-building. Some relationships were deliberately left ambiguous to force solvers to apply logical skills. Hence, while the process is relatively simple, we recognise that it was time-consuming.</p>
 
+  <p>When analysing the guesslog, it seems that many solvers attempted to guess the portraits' names (eg. entering APGAR into the solution checker). While there is little harm in doing so given that there are unlimited guesses (albeit some lost time per guess), it should be noted that in general:</p>
+
+  <ul>
+    <li>Puzzle solutions <font style='font-style:italic;'>feel</font> like they're correct. Specifically, you'll know that a solution is actually a solution because of some thematic link, or because there was a very direct clue hinting at that solution.</li>
+    <li>By the point you reach a puzzle solution, most if not all the information provided by the puzzle should have been used at least once. Hence it is unlikely that the portrait names are the solutions, given that the graph network and the relationship clues had not been used.</li>
+    <li>Unless stated otherwise, puzzle solutions are (generally) coherent words or short phrases. Hence it is unlikely that a string of random letters, random words or a super long string are the solutions.</li>
+  </ul>
+
+  <p>If you are new to puzzles, keeping these in mind may help with determining whether you are close to a solution.</p>
 
 </div>
 
