--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle1.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle1.html
@@ -9,7 +9,7 @@
   <center>
     <h4>Puzzle {{puzInfo.puzId}}</h4>
     <h2 style="margin-bottom: 1rem">{{puzInfo.title}}</h2>
-    <p class="flavourtext"><b>Errata 09:48am 27/06:</b> The word "inherited" in the seventh clue was changed to "was awarded". The PDF has also been updated with this change.</p>
+    <p class="flavourtext"><b>Erratum 09:48am 27/06:</b> The word "inherited" in the seventh clue was changed to "was awarded". The PDF has also been updated with this change.</p>
     <a class="btn btn-primary" href="/pdf/1/" target="_blank" style="margin: 5px;">Download PDF version</a>
     {% if not puzInfo.sols %}
       <a class="btn btn-success" href="/solve/1/" style="margin: 5px;">Submit a guess</a>
