--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol1.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol1.html
@@ -13,7 +13,7 @@
     <h4 style="margin-bottom: 1rem">Solution: <span class="sol-hl">HOLMES</span> or <span class="sol-hl">ELIZABETHHOLMES</span></h4>
     <h5>Solves: {{puzInfo.solves}}</h5>
     <h5>Guesses: {{puzInfo.guesses}}</h5>
-    <a class="btn btn-primary" href="/guesslog/1/" style="margin: 5px;">View guess log</a>
+    <a class="btn btn-primary" href="/guesslog/1/" target="_blank" style="margin: 5px;">View guess log</a>
     <br>
   </center>
 
@@ -38,9 +38,9 @@
     <li>Fiona <b>WOOD</b></li>
   </ol>
 
-  <p>Each of these are individuals from medical history. Moreover, they are currently ordered by alphabetical order of last names, implying that the last names would be important for the next step.</p>
+  <p>Each of these are individuals from medical history. Moreover, they are currently ordered by alphabetical order of last names, implying that only the last names would be important for the next step.</p>
 
-  <p>Specifically, we need to match up these names to the relational clues. As the graph network has 17 spots and there are 16 relational clues, we should try to form a chain of relationships. Specifically, the relationships are:</p>
+  <p>Specifically, we need to match up these names to the relational clues. As the graph network has 17 spots and there are 16 relational clues, we should try to form a chain of relationships. Some research yields the following relationships. Note that each person (except for Lacks and Franklin) appear exactly once as Person 1 and exactly once as Person 2.</p>
 
   <center>
     <table class="table sol-table table-sm">
@@ -96,7 +96,9 @@
     <li>Unless stated otherwise, puzzle solutions are (generally) coherent words or short phrases. Hence it is unlikely that a string of random letters, random words or a super long string are the solutions.</li>
   </ul>
 
-  <p>If you are new to puzzles, keeping these in mind may help with determining whether you are close to a solution.</p>
+  <p>If you are new to puzzles, keeping these rules-of-thumb in mind may help with determining whether you are close to a solution.</p>
+
+  <p><font style='font-style:italic;'>Rated or hated this puzzle? <a href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">Give us feedback!</a></font></p>
 
 </div>
 
