--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol2.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol2.html
@@ -13,7 +13,7 @@
     <h4 style="margin-bottom: 1rem">Solution: <span class="sol-hl">TOXIC</span></h4>
     <h5>Solves: {{puzInfo.solves}}</h5>
     <h5>Guesses: {{puzInfo.guesses}}</h5>
-    <a class="btn btn-primary" href="/guesslog/2/" style="margin: 5px;">View guess log</a>
+    <a class="btn btn-primary" href="/guesslog/2/" target="_blank" style="margin: 5px;">View guess log</a>
     <br>
   </center>
 
@@ -48,6 +48,8 @@
   <p>When analysing the guesslog, it appears that solvers who got stuck did so after obtaining all six Wardle solutions. However, they may not have realised the meta-ness of Wardle #♾️, and thus did not treat "TOXIC" as a special solution. Alternatively, solvers may have treated the six Wardle solutions as some sort of clue towards the real answer. In reality, the preliminary five Wardles solutions were unrelated words chosen to provide enough letters to allow us to deduce TOXIC from the meta-Wordle.</p>
 
   <p>This puzzle was our first interactive puzzle, and we hope you've liked it! The mechanism for this is well-known to most solvers, and hence the puzzle was relatively easy; this was certainly reflected in the solve rates.</p>
+
+  <p><font style='font-style:italic;'>Rated or hated this puzzle? <a href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">Give us feedback!</a></font></p>
 </div>
 
 {% endblock %}
