--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol3.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol3.html
@@ -13,7 +13,7 @@
     <h4 style="margin-bottom: 1rem">Solution: <span class="sol-hl">ACOUSTICNEUROMA</span></h4>
     <h5>Solves: {{puzInfo.solves}}</h5>
     <h5>Guesses: {{puzInfo.guesses}}</h5>
-    <a class="btn btn-primary" href="/guesslog/3/" style="margin: 5px;">View guess log</a>
+    <a class="btn btn-primary" href="/guesslog/3/" target="_blank" style="margin: 5px;">View guess log</a>
     <br>
   </center>
 
@@ -73,6 +73,8 @@
   <p>Originally we wanted to make an audio puzzle (ie. using actual audio clips) but quickly realised that'll be infeasible at MDSC. So, we came up with the next best thing; phonetics!</p>
 
   <p>This puzzle is our first foray into cryptic-crossword-type clues at MDSC. Most solvers are unfamiliar with cryptic clues, so we made these clues cryptic-lite, using only charades as a mechanism. If you liked this puzzle, chances are it's because you enjoyed the cryptic aspect of it! If you want to learn more about cryptic crosswords, we can't recommend <a href="https://www.allenandunwin.com/browse/books/general-books/biography-autobiography/Puzzled-David-Astle-9781743314296" target="_blank"><font style='font-style:italic;'>Puzzled</font> by David Astle</a> enough. It is the half-autobiography, half-cryptic-crossword-guide written by the undisputed king of Australian crosswording David Astle, aka DA, aka the dictionary guy on <font style='font-style:italic;'>Letters and Numbers</font>.</p>
+
+  <p><font style='font-style:italic;'>Rated or hated this puzzle? <a href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">Give us feedback!</a></font></p>
 
 </div>
 
