--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
@@ -13,7 +13,7 @@
     <h4 style="margin-bottom: 1rem">Solution: <span class="sol-hl">HOMESICK</span> or <span class="sol-hl">HOMESICKNESS</span></h4>
     <h5>Solves: {{puzInfo.solves}}</h5>
     <h5>Guesses: {{puzInfo.guesses}}</h5>
-    <a class="btn btn-primary" href="/guesslog/4/" style="margin: 5px;">View guess log</a>
+    <a class="btn btn-primary" href="/guesslog/4/" target="_blank" style="margin: 5px;">View guess log</a>
     <br>
   </center>
 
@@ -124,7 +124,7 @@
     <center><img src="/static/MDSCApp/img/puzImg/FanImage.jpg" alt="Fan Image" style="max-width:min(400px, 100%);padding-top:10px"></center>
   </div>
 
-
+  <p><font style='font-style:italic;'>Rated or hated this puzzle? <a href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">Give us feedback!</a></font></p>
 </div>
 
 {% endblock %}
