--- a/MDSCProj/MDSCApp/templates/MDSCApp/wrapup.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/wrapup.html
@@ -12,9 +12,43 @@
   <br>
   
   <div class="container">
-    <!-- <p>Firstly, thank you all so much for taking part in this Puzzle Hunt! This is the second time we've made puzzles for MDSC, and it was incredibly enjoyable for us. We hope you've found the puzzles as fun as we had making them, and that you're keen for more puzzles in the future!</p>
-    <p></p>-->  
-    <h4>Wrap-up coming very soon; keep an eye out!</h4>
+    <p>Firstly, thank you all so much for taking part in this Puzzle Hunt! This is the second time we've made puzzles for MDSC, and it was incredibly enjoyable for us. We hope you've found the puzzles as fun as we had making them, and that you're keen for more puzzles in the future!</p>
+
+    <p>A total of <b>133 solvers</b> managed to solve at least one puzzle, with a whopping <b>38 solvers</b> completing all four puzzles, of whom <b>22 solvers</b> achieved the full score of 4000 points (ie solved all puzzles within 9 hours of release). Congratulations to everyone, and to <b>Christos Preovolos</b> for being the overall fastest to complete the hunt, with an average solve time of 3h 26m 19s!</p>
+
+    <p>Before going further, please consider giving us <a href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">some feedback</a>. It'll help us tailor the experience for next year.</p>
+
+    <h5>About puzzle hunts</h5>
+    <p>Puzzle hunts occur all over the world. They are generally held online and run by a particular university, such as the <a href="https://puzzles.mit.edu/" target="_blank">MIT Mystery Hunt</a>, or a dedicated team, such as <a href="https://2022.galacticpuzzlehunt.com/" target="_blank">Galactic Puzzle Hunt</a>. Historically, <a href="https://www.melbunimathsstats.org/puzzlehunt" target="_blank">Melbourne</a> and Sydney have also held puzzle hunts, but the Australian circuit has died a little (sadly).</p>
+
+    <p>Dan and Allen have been actively taking part in hunts since 2016, and we've got no plans on stopping! We'd also written the 2019 Melbourne Hunt, as well as last year's MDSC hunt.</p>
+
+    <h5>MDSC 2022</h5>
+    <p>Given the success of last year's MDSC hunt, it was a given that we'd do it again this year. Initial planning for the hunt started in April. The website draft was completed in early June, and everything else fell into place in the week before conference.</p>
+
+    <p>We wanted a variety of puzzle styles in this hunt, so we can expose as many people to the richness of hunts as possible. There ended up being quite the diversity: an interative puzzle, a cryptic puzzle, and two that required research into specific topic areas. Initially we tried to theme each puzzle around the four Academic Day themes, but we relaxed this restriction somewhat to allow us greater flexibility.</p>
+
+    <p>When coming up with a puzzle, we generally start by determining the overall theme or mechanism. Then, we start from the solution and work backwards, generating clues as we go.</p>
+
+    <p>Unlike last year, when all four puzzles were simultaneously released at the start of the conference, we decided to stagger this year's release so people aren't bombarded with the puzzles all on one day. Moreover, a point differential was implemented to encourage same-day attempts at the puzzles during the conference's breaks.</p>
+
+    <p>A hint system permitting free questions to Allen seemed to work OK for those who chose to access this resource, but in the future we might move towards a global hint system as the capacity for us to answer every hint request rapidly is quite limited.</p>
+
+    <h5>Will there be more MDSC Hunts?</h5>
+    <p>Obviously yes! Making this hunt is definitely a highlight of not only the conference, but of the entire medical year. Dan will still be around as an MD4, and Allen can still make puzzles in his spare time after graduating. If you are interested in writing a puzzle for MDSC 2023, message us or send us an email and we'll loop you in!</p>
+
+    <h5>What other puzzle hunts are there?</h5>
+    <p>Loads! Check out the <a href="http://puzzlehuntcalendar.com/" target="_blank">global puzzle hunt calendar</a>. Of note, we draw your attention to two upcoming hunts:</p>
+
+    <ul>
+      <li><a href="https://reddothunt.sg/" target="_blank">REDDOThunt</a> (9 - 11 July): a relatively-short Singaporean puzzle hunt generally aimed at beginner solvers, although experienced solvers will also have lots of fun. There are a total of 20 puzzles.</li>
+      <li><a href="https://2022.galacticpuzzlehunt.com/" target="_blank">Galactic Puzzle Hunt</a> (27 Aug - 6 Sep): a relatively-long American puzzle hunt aimed mostly at intermediate/experienced solvers, although many puzzles will be very accessible to beginner solvers. There will probably be a total of 30-40 puzzles</li>
+    </ul>
+
+    <p>If any of these upcoming hunts sound interesting, go ahead and register a team! Alternatively, if you want to join Dan and Allen's team (as we're keen on incorporating more members!) for both these hunts, message Allen at <a href="mailto:gua@student.unimelb.edu.au">gua@student.unimelb.edu.au</a></p>
+
+    <h5>One final word</h5>
+    <p>Thanks once again, and we hope you've all found puzzles to be an MDSC highlight. If so (and also if not), please give us <a href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">some feedback</a>; it'll only take you 5 mins max (which is a trivial amount of time compared to how long you spent puzzling!). See you all in 2023!</p>
   </div>
 
 
