--- a/MDSCProj/MDSCApp/templates/MDSCApp/wrapup.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/wrapup.html
@@ -16,7 +16,7 @@
 
     <p>A total of <b>133 solvers</b> managed to solve at least one puzzle, with a whopping <b>38 solvers</b> completing all four puzzles, of whom <b>22 solvers</b> achieved the full score of 4000 points (ie solved all puzzles within 9 hours of release). Congratulations to everyone, and to <b>Christos Preovolos</b> for being the overall fastest to complete the hunt, with an average solve time of 3h 26m 19s!</p>
 
-    <p>Before going further, please consider giving us <a href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">some feedback</a>. It'll help us tailor the experience for next year.</p>
+    <p>Before going further, please consider giving us <a href="https://forms.gle/iHtGzufTq46k7JAYA" target="_blank">some feedback</a>. It'll help us tailor the experience for next year. Thank you also to those who have already given us feedback in-person during the conference; it was great to hear from you!</p>
 
     <h5>About puzzle hunts</h5>
     <p>Puzzle hunts occur all over the world. They are generally held online and run by a particular university, such as the <a href="https://puzzles.mit.edu/" target="_blank">MIT Mystery Hunt</a>, or a dedicated team, such as <a href="https://2022.galacticpuzzlehunt.com/" target="_blank">Galactic Puzzle Hunt</a>. Historically, <a href="https://www.melbunimathsstats.org/puzzlehunt" target="_blank">Melbourne</a> and Sydney have also held puzzle hunts, but the Australian circuit has died a little (sadly).</p>
@@ -32,7 +32,7 @@
 
     <p>Unlike last year, when all four puzzles were simultaneously released at the start of the conference, we decided to stagger this year's release so people aren't bombarded with the puzzles all on one day. Moreover, a point differential was implemented to encourage same-day attempts at the puzzles during the conference's breaks.</p>
 
-    <p>A hint system permitting free questions to Allen seemed to work OK for those who chose to access this resource, but in the future we might move towards a global hint system as the capacity for us to answer every hint request rapidly is quite limited.</p>
+    <p>A hint system permitting free questions to Allen seemed to work OK for those who chose to access this resource, but in the future we might move towards a global hint system as the capacity for us to answer every hint request rapidly is quite limited. The reason we released global hints at 3pm on Thursday was largely in response to the sheer number of hint requests coming through for Puzzle 4.</p>
 
     <h5>Will there be more MDSC Hunts?</h5>
     <p>Obviously yes! Making this hunt is definitely a highlight of not only the conference, but of the entire medical year. Dan will still be around as an MD4, and Allen can still make puzzles in his spare time after graduating. If you are interested in writing a puzzle for MDSC 2023, message us or send us an email and we'll loop you in!</p>
