--- a/MDSCProj/MDSCApp/templates/MDSCApp/wrapup.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/wrapup.html
@@ -24,7 +24,7 @@
     <p>Dan and Allen have been actively taking part in hunts since 2016, and we've got no plans on stopping! We'd also written the 2019 Melbourne Hunt, as well as last year's MDSC hunt.</p>
 
     <h5>MDSC 2022</h5>
-    <p>Given the success of last year's MDSC hunt, it was a given that we'd do it again this year. Initial planning for the hunt started in April. The website draft was completed in early June, and everything else fell into place in the week before conference.</p>
+    <p>Given the success of last year's MDSC hunt, it was a given that we'd do it again this year. Initial planning for the hunt started in April. The website (created completely from scratch using Python) draft was completed in early June, and everything else fell into place in the week before conference.</p>
 
     <p>We wanted a variety of puzzle styles in this hunt, so we can expose as many people to the richness of hunts as possible. There ended up being quite the diversity: an interative puzzle, a cryptic puzzle, and two that required research into specific topic areas. Initially we tried to theme each puzzle around the four Academic Day themes, but we relaxed this restriction somewhat to allow us greater flexibility.</p>
 
