--- a/MDSCProj/MDSCApp/templates/MDSCApp/wrapup.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/wrapup.html
@@ -24,7 +24,7 @@
     <p>Dan and Allen have been actively taking part in hunts since 2016, and we've got no plans on stopping! We'd also written the 2019 Melbourne Hunt, as well as last year's MDSC hunt.</p>
 
     <h5>MDSC 2022</h5>
-    <p>Given the success of last year's MDSC hunt, it was a given that we'd do it again this year. Initial planning for the hunt started in April. The website (created completely from scratch using Python) draft was completed in early June, and everything else fell into place in the week before conference.</p>
+    <p>Given the success of last year's MDSC hunt, it was a given that we'd do it again this year. Initial planning for the hunt started in April. The website draft was completed in early June, and everything else fell into place in the week before conference.</p>
 
     <p>We wanted a variety of puzzle styles in this hunt, so we can expose as many people to the richness of hunts as possible. There ended up being quite the diversity: an interative puzzle, a cryptic puzzle, and two that required research into specific topic areas. Initially we tried to theme each puzzle around the four Academic Day themes, but we relaxed this restriction somewhat to allow us greater flexibility.</p>
 
@@ -33,6 +33,8 @@
     <p>Unlike last year, when all four puzzles were simultaneously released at the start of the conference, we decided to stagger this year's release so people aren't bombarded with the puzzles all on one day. Moreover, a point differential was implemented to encourage same-day attempts at the puzzles during the conference's breaks.</p>
 
     <p>A hint system permitting free questions to Allen seemed to work OK for those who chose to access this resource, but in the future we might move towards a global hint system as the capacity for us to answer every hint request rapidly is quite limited. The reason we released global hints at 3pm on Thursday was largely in response to the sheer number of hint requests coming through for Puzzle 4.</p>
+
+    <p>The website was written entirely from scratch using Python/Django. If you liked it and want to see the source code, get in touch with Allen and I'll give you access to the github repository.</p>
 
     <h5>Will there be more MDSC Hunts?</h5>
     <p>Obviously yes! Making this hunt is definitely a highlight of not only the conference, but of the entire medical year. Dan will still be around as an MD4, and Allen can still make puzzles in his spare time after graduating. If you are interested in writing a puzzle for MDSC 2023, message us or send us an email and we'll loop you in!</p>
